fix alignment of get in touch button with github, twitter

--- a/static/style.css
+++ b/static/style.css
@@ -129,7 +129,7 @@ footer img[alt="Footer logo"] {
 }
 
 /* Vertical alignment fix for hero section buttons */
-#hero .row {
+#hero .row .row {
     align-items: center !important;
 }
 
